--- a/_includes/widgets/news_card.html
+++ b/_includes/widgets/news_card.html
@@ -2,15 +2,21 @@
 
 <div class="my-3 bg-white shadow-sm rounded-xl">
     <h6 class="p-3 mb-0 border-bottom border-gray"><i class="fas fa-rss"></i> News</h6>
-    <div class="px-3 pb-1 small">
+    <div class="px-3 pb-1">
         {% for year in news_by_year %}
         <div class="media py-1 {% if not_first -%}border-top border-gray{%- endif %}">
             {% assign not_first = true %}
             <div class="mr-3 text-muted my-1">{{ year.name }}</div>
             <div class="media-body">
                 {% for item in year.items %}
-                <div class="my-1 d-flex">
-                    <div>{{ item.title }}</div>
+                <div class="my-2 d-flex">
+                    <div class="flex-grow-1">
+                        {% assign title_parts = item.title | split: "<strong>" %}
+                        <div>{{ title_parts[0] }}</div>
+                        {% if title_parts[1] %}
+                        <div class="ml-3"><strong>{{ title_parts[1] | remove: "</strong>" }}</strong></div>
+                        {% endif %}
+                    </div>
                     <div class="ml-auto mt-auto text-muted no-break"><i>{{ item.date | date: "%b %d" }}</i></div>
                 </div>
                 {% endfor %}
