--- a/_includes/widgets/research_item.html
+++ b/_includes/widgets/research_item.html
@@ -26,25 +26,24 @@
     </div>
 </div>
 
-<div class="row no-gutters d-md-none {% unless include.hide_bottom_border %}border-bottom{% endunless %} border-gray {% if include.first %}rounded-xl-top{% endif %} {% if include.last %}rounded-xl-bottom{% endif %} {% if item.cover %}lazy{% endif %}" data-src="{{ item.cover | relative_url }}">
-    <div class="w-100 {% if include.first %}rounded-xl-top{% endif %} {% if include.last %}rounded-xl-bottom{% endif %}" style="background-color: rgba(255,255,255,0.9);">
-        <div class="d-flex align-items-start flex-column py-3 px-4">
-            <div class="mb-auto"></div>
-            <div>
-                <h5 class="mt-0 mb-1 font-weight-normal">{{ item.title }}</h5>
-                <p class="mt-0 mb-0 text-muted">{{ item.description }}</p>
-                
-                <p class="small pb-0 mb-0 lh-125 text-muted abstract-links">
-                    {% for link in item.links %}
-                    {% if link[1].url %}
-                    <a target="{{ link[1]['target'] }}" href="{{ link[1]['url'] }}">[{{ link[0] }}]</a>
-                    {% else %}
-                    <a target="_blank" href="{{ link[1] }}">[{{ link[0] }}]</a>
-                    {% endif %}
-                    {% endfor %}
-                </p>
-            </div>
-        </div>
+<div class="d-md-none {% unless include.hide_bottom_border %}border-bottom{% endunless %} border-gray">
+    {%- if item.cover -%}
+    <div class="p-3">
+        <img data-src="{{ item.cover | relative_url }}" alt="{{ item.title }}" class="lazy w-100 rounded-sm" src="{{ '/assets/images/empty_300x200.png' | relative_url }}">
     </div>
-
+    {%- endif -%}
+    <div class="p-3">
+        <h5 class="mt-0 mb-1 font-weight-normal">{{ item.title }}</h5>
+        <p class="mt-0 mb-0 text-muted">{{ item.description }}</p>
+        
+        <p class="small pb-0 mb-0 lh-125 text-muted abstract-links">
+            {% for link in item.links %}
+            {% if link[1].url %}
+            <a target="{{ link[1]['target'] }}" href="{{ link[1]['url'] }}">[{{ link[0] }}]</a>
+            {% else %}
+            <a target="_blank" href="{{ link[1] }}">[{{ link[0] }}]</a>
+            {% endif %}
+            {% endfor %}
+        </p>
+    </div>
 </div>
